--- a/bwapi/TestAIModule/TestAIModule.vcxproj
+++ b/bwapi/TestAIModule/TestAIModule.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{982561B2-A7D0-44E9-BD3D-0FD117E3F882}</ProjectGuid>
     <RootNamespace>ExampleAIModule</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
