--- a/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj
+++ b/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{F0A49DFC-9FBD-43DA-9CD5-4F97DA9C8880}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BWAPILIBTest</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
