--- a/bwapi/BWScriptEmulator/BWScriptEmulator.vcxproj
+++ b/bwapi/BWScriptEmulator/BWScriptEmulator.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{9568B84C-42BE-4068-8775-FAEFB2DBC770}</ProjectGuid>
     <RootNamespace>BWScriptEmulator</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
