--- a/bwapi/Replay_Tool/Replay_Tool.vcxproj
+++ b/bwapi/Replay_Tool/Replay_Tool.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{33D9CC15-ACCC-45E4-A947-5D30E0A8E943}</ProjectGuid>
     <RootNamespace>Replay_Tool</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
