--- a/bwapi/Storm/Storm.vcxproj
+++ b/bwapi/Storm/Storm.vcxproj
@@ -10,6 +10,7 @@
     <ProjectGuid>{08C0C784-F586-4CAA-8951-8ADF1586C0E9}</ProjectGuid>
     <RootNamespace>Storm</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
