--- a/bwapi/libReplayToolTest/libReplayToolTest.vcxproj
+++ b/bwapi/libReplayToolTest/libReplayToolTest.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{5C4BE4F1-9D4A-4ECA-B64B-ABDB58199F5C}</ProjectGuid>
     <RootNamespace>Replay_Tool</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
